# Glyphix

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md
src/: capacity.rs  check.rs  codec.rs  color.rs  ecc.rs  error.rs  grid.rs  layout.rs  lib.rs  main.rs  pack.rs  profile.rs  render.rs  stream.rs
tests/: integrity.rs  roundtrip.rs
